// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReplyLine - Snapshots > matches snapshot with all custom props 1`] = `
<svg
  height="216"
  preserveAspectRatio="xMinYMin meet"
  viewBox="0 0 48 216"
  width="48"
>
  <path
    d="M 16 0 v 92 a 8 8 0 0 0 8 8 h 24"
    fill="none"
    stroke="#00ff00"
    stroke-width="3"
    vector-effect="non-scaling-stroke"
  />
  <path
    d="M 16 92 v 124"
    fill="none"
    stroke="#00ff00"
    stroke-width="3"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;

exports[`ReplyLine - Snapshots > matches snapshot with custom strokeColor 1`] = `
<svg
  height="116"
  preserveAspectRatio="xMinYMin meet"
  viewBox="0 0 48 116"
  width="48"
>
  <path
    d="M 16 0 v 42 a 8 8 0 0 0 8 8 h 24"
    fill="none"
    stroke="#ff0000"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
  <path
    d="M 16 42 v 74"
    fill="none"
    stroke="#ff0000"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;

exports[`ReplyLine - Snapshots > matches snapshot with custom strokeWidth 1`] = `
<svg
  height="116"
  preserveAspectRatio="xMinYMin meet"
  viewBox="0 0 48 116"
  width="48"
>
  <path
    d="M 16 0 v 42 a 8 8 0 0 0 8 8 h 24"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="4"
    vector-effect="non-scaling-stroke"
  />
  <path
    d="M 16 42 v 74"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="4"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;

exports[`ReplyLine - Snapshots > matches snapshot with default props 1`] = `
<svg
  height="116"
  preserveAspectRatio="xMinYMin meet"
  viewBox="0 0 48 116"
  width="48"
>
  <path
    d="M 16 0 v 42 a 8 8 0 0 0 8 8 h 24"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
  <path
    d="M 16 42 v 74"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;

exports[`ReplyLine - Snapshots > matches snapshot with isLast false 1`] = `
<svg
  height="116"
  preserveAspectRatio="xMinYMin meet"
  viewBox="0 0 48 116"
  width="48"
>
  <path
    d="M 16 0 v 42 a 8 8 0 0 0 8 8 h 24"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
  <path
    d="M 16 42 v 74"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;

exports[`ReplyLine - Snapshots > matches snapshot with isLast true 1`] = `
<svg
  height="50"
  preserveAspectRatio="xMinYMin meet"
  viewBox="0 0 48 50"
  width="48"
>
  <path
    d="M 16 0 v 42 a 8 8 0 0 0 8 8 h 24"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;

exports[`ReplyLine - Snapshots > matches snapshot with isLast true and custom styling 1`] = `
<svg
  height="75"
  preserveAspectRatio="xMinYMin meet"
  viewBox="0 0 48 75"
  width="48"
>
  <path
    d="M 16 0 v 67 a 8 8 0 0 0 8 8 h 24"
    fill="none"
    stroke="#0000ff"
    stroke-width="1"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;

exports[`ReplyLine - Snapshots > matches snapshot with large height 1`] = `
<svg
  height="316"
  preserveAspectRatio="xMinYMin meet"
  viewBox="0 0 48 316"
  width="48"
>
  <path
    d="M 16 0 v 142 a 8 8 0 0 0 8 8 h 24"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
  <path
    d="M 16 142 v 174"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;

exports[`ReplyLine - Snapshots > matches snapshot with small height 1`] = `
<svg
  height="116"
  preserveAspectRatio="xMinYMin meet"
  viewBox="0 0 48 116"
  width="48"
>
  <path
    d="M 16 0 v 42 a 8 8 0 0 0 8 8 h 24"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
  <path
    d="M 16 42 v 74"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;

exports[`ReplyLine - Snapshots > matches snapshot with zero height 1`] = `
<svg
  height="116"
  preserveAspectRatio="xMinYMin meet"
  viewBox="0 0 48 116"
  width="48"
>
  <path
    d="M 16 0 v 42 a 8 8 0 0 0 8 8 h 24"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
  <path
    d="M 16 42 v 74"
    fill="none"
    stroke="rgb(96,96,96)"
    stroke-width="2"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;
